# c-sololearn

./: CMakeLists.txt  LICENSE  main.c  makefile
example/: atoi.c
src/1-basic-concept/: 02-variable-constant.c  03-datatype.c  04-input-output.c  05-comments.c  06-operator.c
src/2-condition-loop/: 07-if-statement.c  08-switch-statement.c  09-while++.c  09-while-loop.c  10-for-loop.c
src/3-function/: 11-function.c  12-function-scope.c  13-function-pointer-example.c  13-function-pointer.c
src/4-core/: 14-string-char.c  14-string.c  15-array.c
src/5-pointer/: 16-pointer-01-variable.c  16-pointer-02-function-01.c  16-pointer-02-function.c  16-pointer-03-function-template.c  16-pointer-04-array-example.c  16-pointer-04-array.c  16-pointer-input.c  16-pointer-memory.c  16-pointer-value-example.c  16-pointer-value.c
src/6-struct-union/: 17-struct-01-typedef.c  17-struct-02-typedef-struct.c  17-struct-03-pointer.c  17-struct-04-typedef-pointer.c  17-struct-05-array.c  17-struct.c  18-union-memory.c  18-union-struct-example.c  18-union-struct.c  18-union.c
src/7-memory-manage/: memory-01-malloc-free.c  memory-02-calloc.c  memory-03-malloc-realloc.c  memory-04-string.c  memory-05-array.c  memory-06-dynamic-array.c  memory.c
src/c-shell/: cat  cat.c  echo.c
src/error/: error-01-handle.c  error-02-file-errno.c  error-03-file-perror.c  error-04-code.c  error-05-math.c  error-06-file-feof.c
src/file/: file-01-write.c  file-02-read-2.c  file-02-read-string.c  file-02-read.c  file-03-example.c  file-04-binary-array-example.c  file-04-binary-array.c  file-05-binary-struct.c  file.c
src/preprocessor/: 01-preprocessor.c  02-define.c  03-define-pre.c  04-define-ifndef.c  05-define-if-statement.c  06-define-if-statement-example.c  06-macro-operator.c  07-error-pragma.c
