cmake_minimum_required(VERSION 3.19)
project(c_sololearn C)

set(CMAKE_C_STANDARD 11)

add_executable(${PROJECT_NAME} main.c)
add_executable(src_01-helloworld src/1-basic-concept/01-helloworld.c)
add_executable(src_02-variable-constant src/1-basic-concept/02-variable-constant.c)
add_executable(src_03-datatype src/1-basic-concept/03-datatype.c)
add_executable(src_04-input-output src/1-basic-concept/04-input-output.c)
add_executable(src_05-operator src/1-basic-concept/06-operator.c)
add_executable(example_atoi example/atoi.c)
add_executable(src_06-operator src/1-basic-concept/06-operator.c)
add_executable(src_2-condition-loop_07-if-statement src/2-condition-loop/07-if-statement.c)
add_executable(src_2-condition-loop_08-switch-statement src/2-condition-loop/08-switch-statement.c)
add_executable(src_1-basic-concept_05-comments src/1-basic-concept/05-comments.c)
add_executable(src_2-condition-loop_09-while-loop src/2-condition-loop/09-while-loop.c)
add_executable(src_2-condition-loop_10-for-loop src/2-condition-loop/10-for-loop.c)
add_executable(src_3-function_11-function src/3-function/11-function.c)
add_executable(src_3-function_12-function-scope src/3-function/12-function-scope.c)
add_executable(src_3-function_13-function-pointer src/3-function/13-function-pointer.c)
add_executable(src_4-core_14-string src/4-core/14-string.c)
add_executable(src_3-function_13-function-pointer-example src/3-function/13-function-pointer-example.c)
add_executable(src_4-core_16-pointer src/5-pointer/16-pointer-01-variable.c)
add_executable(src_4-core_16-pointer-example src/5-pointer/16-pointer-02-function.c)
add_executable(src_4-core_16-pointer-example2 src/5-pointer/16-pointer-03-function-template.c)
add_executable(src_4-core_15-array src/4-core/15-array.c)
add_executable(src_5-pointer_16-pointer-02-function-01 src/5-pointer/16-pointer-02-function-01.c)
add_executable(src_5-pointer_16-pointer-04-array src/5-pointer/16-pointer-04-array.c)
add_executable(src_5-pointer_16-pointer-input src/5-pointer/16-pointer-input.c)
add_executable(src_5-pointer_16-pointer-memory src/5-pointer/16-pointer-memory.c)
add_executable(src_5-pointer_16-pointer-value src/5-pointer/16-pointer-value.c)
add_executable(src_5-pointer_16-pointer-value-example src/5-pointer/16-pointer-value-example.c)
add_executable(src_5-pointer_16-pointer-04-array-example src/5-pointer/16-pointer-04-array-example.c)
add_executable(src_6-struct-union_17-struct src/6-struct-union/17-struct.c)
add_executable(src_6-struct-union_17-struct-typedef src/6-struct-union/17-struct-01-typedef.c)
add_executable(src_6-struct-union_17-struct-typedef-struct src/6-struct-union/17-struct-02-typedef-struct.c)
add_executable(src_6-struct-union_17-struct-typedef-pointer src/6-struct-union/17-struct-03-pointer.c)
add_executable(src_6-struct-union_17-struct-04-typedef-pointer src/6-struct-union/17-struct-04-typedef-pointer.c)
add_executable(src_6-struct-union_17-struct-05-array src/6-struct-union/17-struct-05-array.c)
add_executable(src_6-struct-union_18-union src/6-struct-union/18-union.c)
add_executable(src_6-struct-union_18-union-memory src/6-struct-union/18-union-memory.c)
add_executable(src_6-struct-union_18-union-struct src/6-struct-union/18-union-struct.c)
add_executable(src_6-struct-union_18-union-struct-example src/6-struct-union/18-union-struct-example.c)
add_executable(src_2-condition-loop_09-while++ src/2-condition-loop/09-while++.c)
add_executable(src_8-other_echo src/c-shell/echo.c)
add_executable(src_7-memory-manage_memory src/7-memory-manage/memory.c)
add_executable(src_7-memory-manage_memory-free src/7-memory-manage/memory-01-malloc-free.c)
add_executable(src_7-memory-manage_memory-calloc src/7-memory-manage/memory-02-calloc.c)
add_executable(src_7-memory-manage_memory-03-malloc-realloc src/7-memory-manage/memory-03-malloc-realloc.c)
add_executable(src_7-memory-manage_memory-04-string src/7-memory-manage/memory-04-string.c)
add_executable(src_7-memory-manage_memory-05-array src/7-memory-manage/memory-05-array.c)
add_executable(src_7-memory-manage_memory-06-dynamic-array src/7-memory-manage/memory-06-dynamic-array.c)
add_executable(src_4-core_14-string-char src/4-core/14-string-char.c)
add_executable(src_library_rand src/library/rand.c)
add_executable(src_file_file-example src/file/file-03-example.c)
add_executable(src_file_file-example-2 src/file/file-02-read-2.c)
add_executable(src_file_file-read src/file/file-02-read.c)
add_executable(src_8-other_cat src/c-shell/cat.c)
add_executable(src_c-shell_cat-c src/c-shell/cat.c)
add_executable(src_file_file-04-binary-file src/file/file-04-binary-array.c)
add_executable(src_file_file-05-binary-struct src/file/file-05-binary-struct.c)
add_executable(src_error_error-handle src/error/error-01-handle.c)
add_executable(src_error_error-file src/error/error-02-file-errno.c)
add_executable(src_error_error-file-perror src/error/error-03-file-perror.c)
add_executable(src_error_error-code src/error/error-04-code.c)
add_executable(src_error_error-05-math src/error/error-05-math.c)
add_executable(src_file_file-04-binary-array-example src/file/file-04-binary-array-example.c)
add_executable(src_file_file-02-read-string src/file/file-02-read-string.c)
add_executable(src_error_error-06-file-feof src/error/error-06-file-feof.c)
add_executable(src_preprocessor_preprocessor src/preprocessor/01-preprocessor.c)
add_executable(src_preprocessor_define src/preprocessor/02-define.c)
add_executable(src_preprocessor_define-pre src/preprocessor/03-define-pre.c)
add_executable(src_preprocessor_03-define-if src/preprocessor/04-define-ifndef.c)
add_executable(src_preprocessor_05-define-if-2 src/preprocessor/05-define-if-statement.c)
add_executable(src_preprocessor_06-macro-operator src/preprocessor/06-macro-operator.c)
add_executable(src_preprocessor_06-define-if-statement-example src/preprocessor/06-define-if-statement-example.c)
add_executable(src_library_c-time src/library/c-time.c)